# autogen-demo

./: .env.example  .gitignore  OAI_CONFIG_LIST.example  README.md  agentchat_websockets.ipynb  code_exec.py  conversable_agent_demo.py  conversable_agent_human_in_loop_demo.py  conversable_human_agent_demo.py  conversable_two_agent_demo.py  docker_code_executor_demo.py  excel_data_analysis_demo.py  excel_data_analysis_with_nested_chat_demo.py  hello_world.py  local_code_executor_demo.py  main.py  pyproject.toml  react_tavily.py  tool_use_agent_demo.py
.devcontainer/: Dockerfile
src/: quick_start.py
